[package]
name = "vexel"
version = "0.0.1"
edition = "2021"
authors = ["Tyler Critchlow", "Winch Team"]
description = "Linear algebra in Rust"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/vexel/0.0.1/vexel"
readme = "README.md"
keywords = ["game-development", "physics"]
categories = ["game-development"]

[dependencies]